# AI_Diplomacy

./: CLAUDE.md  DEBUG_LOGGING.md  WANDB_LLM_LOGGING_IMPLEMENTATION.md  diplomacy_grpo_training.ipynb  fix_wandb_logging.py  lm_game.py  pyproject.toml  requirements_grpo.txt  test_debug_logging.py  test_grpo_wandb.py  test_wandb_logging.py
ai_diplomacy/: clients.py  enhanced_wandb_logger.py  grpo_env.py  grpo_rewards.py  grpo_trainer.py  negotiations.py  planning.py  prompt_constructor.py  utils.py  wandb_llm_logger.py
ai_diplomacy/prompts/: order_instructions.txt
