[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-diplomacy"
version = "0.1.0"
description = "AI Diplomacy - Multi-agent reinforcement learning for Diplomacy game"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.34.0",
    "bcrypt>=4.0.0",
    "coloredlogs>=15.0.1",
    "python-dotenv>=0.19.0",
    "google-generativeai>=0.3.0",
    "json-repair>=0.25.0",
    "json5>=0.9.0",
    "matplotlib>=3.5.0",
    "openai>=1.0.0",
    "pylint>=2.15.0",
    "pytest>=7.0.0",
    "pytest-xdist>=2.5.0",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    "seaborn>=0.11.0",
    "sphinx>=4.0.0",
    "sphinx-copybutton>=0.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "together>=0.2.0",
    "tornado>=6.0",
    "tqdm>=4.60.0",
    "ujson>=5.0.0",
    # GRPO training dependencies
    "torch>=1.13.0",
    "transformers>=4.21.0",
    "accelerate>=0.20.0",
    "datasets>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "tensorboard>=2.8.0",
    "wandb>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_diplomacy*", "diplomacy*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]
